--- a/ModuloPricipal/ModuloPricipal/Menu.xaml
+++ b/ModuloPricipal/ModuloPricipal/Menu.xaml
@@ -8,7 +8,7 @@
      xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Menu" Height="727.556" Background="#FF2D2D30" Width="1024" WindowStartupLocation="CenterScreen">
+        Title="Menu" Height="727.556" Background="#FF2D2D30" Width="1024" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
