--- a/ModuloPricipal/ModuloPricipal/Menu.xaml
+++ b/ModuloPricipal/ModuloPricipal/Menu.xaml
@@ -27,7 +27,7 @@
 
 
         </Grid.RowDefinitions>
-        <Controls:Tile Grid.Row="1" Grid.Column="1"  Width="350" Height="130" Background="BlueViolet" Title="Ventas" TitleFontSize="20">
+        <Controls:Tile Click=" btnAgregar_Click" Grid.Row="1" Grid.Column="1"  Width="350" Height="130" Background="BlueViolet" Title="Ventas" TitleFontSize="20">
             <Controls:Tile.Effect>
                 <DropShadowEffect/>
             </Controls:Tile.Effect>
