--- a/ModuloPricipal/ModuloPricipal/PuntoVenta.xaml
+++ b/ModuloPricipal/ModuloPricipal/PuntoVenta.xaml
@@ -46,11 +46,10 @@
 
 
         </Grid>
-        <DataGrid x:Name="dataGrid"    AutoGenerateColumns="False"  HorizontalAlignment="Left" Margin="5,5,5,5"
-                  VerticalAlignment="Top" Height="390" Width="629" Grid.Row="3"  IsReadOnly="True"
+        <DataGrid x:Name="dataGrid"    AutoGenerateColumns="False"  HorizontalAlignment="Left" Margin="5,5,5,5"  
+                  VerticalAlignment="Top" Height="390" Width="629" Grid.Row="3" MouseDoubleClick="dataGrid_MouseDoubleClick"  
                      
-                         CanUserAddRows="False"  
-                   CanUserDeleteRows="False" Background="#FFF14C4C" FontFamily="black" 
+                     
                   
                   >
             <DataGrid.Columns>
@@ -75,8 +74,8 @@
                 <ColumnDefinition Width="auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Button Content="Agregar" Foreground="Black" Margin="5,5,5,5" Name="btnAgregar" Height="30" Width="100" Click="btnAgregar_Click"  ></Button>
-            <Button Content="Eliminar" Foreground="Red"   Margin="5,6,6,0" Name="btnCancelar" Grid.Column="1" Height="30" Width="100" VerticalAlignment="Top" ></Button>
-            <Button Content="Actualizar" Margin="5,5,5,5" Name="btnActualizar" Grid.Column="2"  Height="30" Width="100"></Button>
+            <Button Content="Eliminar" Foreground="Red"   Margin="5,6,6,0" Name="btnCancelar" Grid.Column="1" Height="30" Width="100" VerticalAlignment="Top" Click="btnCancelar_Click" ></Button>
+            <Button Content="Actualizar" Margin="5,5,5,5" Name="btnActualizar" Grid.Column="2"  Height="30" Width="100" Click="btnActualizar_Click"></Button>
             <Button Content="Terminar Venta"  Foreground="Blue" Margin="5,6,8,0" Name="btnlimpiar" Grid.Column="3" Width="100" Height="30" VerticalAlignment="Top"   />
         </Grid   >
 
