--- a/ModuloPricipal/ModuloPricipal/PuntoVenta.xaml
+++ b/ModuloPricipal/ModuloPricipal/PuntoVenta.xaml
@@ -46,20 +46,21 @@
 
 
         </Grid>
-        <DataGrid x:Name="dataGrid"    AutoGenerateColumns="False"  HorizontalAlignment="Left" Margin="5,5,5,5"
-                  VerticalAlignment="Top" Height="390" Width="629" Grid.Row="3" 
+        <DataGrid x:Name="dataGrid"     HorizontalAlignment="Left" Margin="5,5,5,5"
+                  VerticalAlignment="Top" Height="390" Width="629" Grid.Row="3"  
                      
-                         
-                 
+                      MouseDoubleClick="dataGrid_MouseDoubleClick_1" 
                   
-                  MouseDoubleClick="dataGrid_MouseDoubleClick"  >
+                  >
             <DataGrid.Columns>
                 <!--<DataGridTextColumn Header="id" Binding="{Binding id_producto}" Width="auto"></DataGridTextColumn>-->
                 <DataGridTextColumn Header="#Producto" Binding="{Binding idProductos}" Width="auto"></DataGridTextColumn>
                 <DataGridTextColumn Header="Nombre" Binding="{Binding nombre}" Width="auto" ></DataGridTextColumn>
                 <!--<DataGridTextColumn Header="Descripcion" Binding="{Binding descripcion}" Width="auto" ></DataGridTextColumn>
                 <DataGridTextColumn Header="Cantidad" Binding="{Binding cantidad}" Width="auto"></DataGridTextColumn>
-                --><!--<DataGridTextColumn Header="IVA" Binding="{Binding iva}" Width="auto"></DataGridTextColumn>--><!--
+                -->
+                <!--<DataGridTextColumn Header="IVA" Binding="{Binding iva}" Width="auto"></DataGridTextColumn>-->
+                <!--
                 <DataGridTextColumn Header="Precio$" Binding="{Binding preci}" Width="auto"></DataGridTextColumn>-->
 
 
@@ -75,8 +76,8 @@
                 <ColumnDefinition Width="auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Button Content="Agregar" Foreground="Black" Margin="5,5,5,5" Name="btnAgregar" Height="30" Width="100" Click="btnAgregar_Click"  ></Button>
-            <Button Content="Eliminar" Foreground="Red"   Margin="5,6,6,0" Name="btnCancelar" Grid.Column="1" Height="30" Width="100" VerticalAlignment="Top" ></Button>
-            <Button Content="Actualizar" Margin="5,5,5,5" Name="btnActualizar" Grid.Column="2"  Height="30" Width="100" Click="btnActualizar_Click"></Button>
+            <Button Content="Eliminar" Foreground="Red"   Margin="5,6,7,5" Name="btnCancelar" Grid.Column="1" Width="100" Click="btnCancelar_Click_1" />
+            <Button Content="Actualizar" Margin="5,5,5,5" Name="btnActualizar" Grid.Column="2"  Height="30" Width="100"></Button>
             <Button Content="Terminar Venta"  Foreground="Blue" Margin="5,6,8,0" Name="btnlimpiar" Grid.Column="3" Width="100" Height="30" VerticalAlignment="Top"   />
         </Grid   >
 
