--- a/ModuloPricipal/ModuloPricipal/App.xaml
+++ b/ModuloPricipal/ModuloPricipal/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ModuloPricipal"
-             StartupUri="Login.xaml">
+             StartupUri="PuntoVenta.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
